--- a/PRG2/WebContent/user/indexUsuario.xhtml
+++ b/PRG2/WebContent/user/indexUsuario.xhtml
@@ -221,16 +221,16 @@
 						</f:facet>
 
 						<h:outputText value="Usuario:" />
-						<p:inputText value="#{userBean.usuario.userName}" disabled="true" />
+						<p:inputText value="#{userBean.usuarioTemporal.userName}" disabled="true" />
 
 						<h:outputText value="Nombre: " />
-						<p:inputText value="#{userBean.usuario.fullName}" />
+						<p:inputText value="#{userBean.usuarioTemporal.fullName}" />
 
 						<h:outputText value="Correo: " />
-						<p:inputText value="#{userBean.usuario.emailAddress}" />
+						<p:inputText value="#{userBean.usuarioTemporal.emailAddress}" />
 
 						<h:outputText value="Telefono: " />
-						<p:inputText value="#{userBean.usuario.phoneNumber}" />
+						<p:inputText value="#{userBean.usuarioTemporal.phoneNumber}" />
 
 					</p:panelGrid>
 
