--- a/PRG2/WebContent/user/cambioContrasenia.xhtml
+++ b/PRG2/WebContent/user/cambioContrasenia.xhtml
@@ -24,6 +24,7 @@
 						match="password2" label="Password 1" required="true"
 						feedback="true">
 						<f:validateLength maximum="8" minimum="6" />
+						<f:validateRegex pattern="((?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,8})" />
 					</p:password>
 
 					<h:outputLabel for="password2" value="Confimar Contraseña: *" />
@@ -32,6 +33,7 @@
 						label="Password 2" required="true"
 						feedback="true">
 						<f:validateLength maximum="8" minimum="6" />
+						<f:validateRegex pattern="((?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,8})" />
 					</p:password>
 				</h:panelGrid>
 
