--- a/PRG2/WebContent/user/indexAdmin.xhtml
+++ b/PRG2/WebContent/user/indexAdmin.xhtml
@@ -72,7 +72,10 @@
 							filterMatchMode="contains">
 							<h:outputText value="#{nw.state}"></h:outputText>
 						</p:column>
-
+						<p:column>
+							<p:commandButton action="#{newBean.cambiarEstado}"
+								update="newsDT" value="Cambiar Estado" />
+						</p:column>
 					</p:dataTable>
 				</p:panel>
 			</h:form>
@@ -142,6 +145,13 @@
 
 							<p:tooltip for="pdfAudit" value="Descargar esta tabla en PDF"
 								position="top" />
+						</f:facet>
+						
+						<f:facet name="header">
+							<p:calendar id="button1" value="#{auditBean.fecha1}"
+								showOn="button" />
+							<p:calendar id="button2" value="#{auditBean.fecha2}"
+								showOn="button" />
 						</f:facet>
 
 						<p:column headerText="Id" filterBy="#{aud.id}"
