--- a/PRG2/WebContent/user/indexUsuario.xhtml
+++ b/PRG2/WebContent/user/indexUsuario.xhtml
@@ -60,109 +60,104 @@
 		</p:tab>
 
 		<p:tab title="Buscar ">
-			<h:form>
-				<p:tabView dynamic="true" cache="true" effect="fold">
+			<p:tabView dynamic="true" cache="true" effect="fold">
+				<p:tab title="Mis laminas repetidas">
+					<p:dataTable var="rs" id="NuevaRepetidaTabla"
+						value="#{repeatedsheetBean.listarRepeatedsheet}" paginator="true"
+						rows="10">
 
-					<p:tab title="Mis laminas repetidas">
+						<f:facet name="header">
+							<p:commandLink id="NuevaRepetida"
+								onclick="PF('dialogNuevaRepetida').show()"
+								update="@([id$=gridNuevaRepetida])">
+								<p:graphicImage url="/resources/img/export/add.png" width="24" />
+							</p:commandLink>
+							<p:tooltip for="NuevaRepetida"
+								value="Agregar una nueva lamina repetida" position="top" />
+						</f:facet>
 
-						<p:dataTable var="rs" id="NuevaRepetidaTabla"
-							value="#{repeatedsheetBean.listarRepeatedsheet}" paginator="true"
-							rows="10">
+						<p:column headerText="Numero de la lamina">
+							<h:outputText value="#{rs.numberSheets}"></h:outputText>
+						</p:column>
 
-							<f:facet name="header">
-								<p:commandLink id="NuevaRepetida"
-									onclick="PF('dialogNuevaRepetida').show()"
-									update="@([id$=gridNuevaRepetida])">
-									<p:graphicImage url="/resources/img/export/add.png" width="24" />
-								</p:commandLink>
-								<p:tooltip for="NuevaRepetida"
-									value="Agregar una nueva lamina repetida" position="top" />
-							</f:facet>
+						<p:column headerText="Numero de veces repetidas">
+							<h:outputText value="#{rs.countSheets}"></h:outputText>
+						</p:column>
+					</p:dataTable>
 
-							<p:column headerText="Numero de la lamina">
-								<h:outputText value="#{rs.numberSheets}"></h:outputText>
+					<p:dialog widgetVar="dialogNuevaRepetida" modal="true"
+						resizable="false" draggable="false" closable="false">
+						<h:form>
+							<h:panelGrid id="gridNuevaRepetida" columns="2" cellpadding="5">
+
+								<h:outputLabel for="numberSheet" value="Numero de la ficha: *" />
+								<p:inputText id="numberSheet"
+									value="#{repeatedsheetBean.repeatedsheet.numberSheets}"
+									required="true">
+									<f:validateLength minimum="1" />
+									<f:validateDoubleRange minimum="1" maximum="670" />
+								</p:inputText>
+
+								<h:outputLabel for="countSheets" value="Cuantas Fichas: *" />
+								<p:inputText id="countSheets"
+									value="#{repeatedsheetBean.repeatedsheet.countSheets}"
+									required="true">
+									<f:validateLength minimum="1" />
+									<f:validateDoubleRange minimum="1" />
+								</p:inputText>
+							</h:panelGrid>
+
+							<h:panelGrid columns="2">
+								<p:commandButton
+									action="#{repeatedsheetBean.adicionarRepeatedsheet}"
+									value="Agregar" update="@([id$=NuevaRepetidaTabla])" />
+								<p:commandButton onclick="PF('dialogNuevaRepetida').hide()"
+									value="Cerrar" update="@([id$=gridNuevaRepetida])" />
+							</h:panelGrid>
+						</h:form>
+					</p:dialog>
+				</p:tab>
+
+				<p:tab title="Usuarios con mis laminas faltantes">
+					<h:form>
+						<p:dataTable var="user" value="#{missingsheetBean.usuarios}"
+							paginator="true" cellpadding="5" border="1" rows="6">
+
+							<p:column headerText="Usuario" sortBy="#{user.userName}">
+								<h:outputText value="#{user.userName}" />
 							</p:column>
 
-							<p:column headerText="Numero de veces repetidas">
-								<h:outputText value="#{rs.countSheets}"></h:outputText>
+							<p:column headerText="Nombre completo">
+								<h:outputText value="#{user.fullName}" />
+							</p:column>
+
+							<p:column headerText="E-mail">
+								<h:outputText value="#{user.emailAddress}" />
+							</p:column>
+
+							<p:column headerText="Telefono">
+								<h:outputText value="#{user.phoneNumber}" />
+							</p:column>
+
+
+							<p:column headerText="Contactar Correo">
+								<p:commandButton value="Correo"
+									action="#{userBean.enviarCorreo}">
+									<f:param name="userName" value="#{user.userName}" />
+								</p:commandButton>
+							</p:column>
+
+							<p:column headerText="Contactar SMS">
+								<p:commandButton value="SMS" action="#{userBean.enviarSms}">
+									<f:param name="userName" value="#{user.userName}" />
+								</p:commandButton>
 							</p:column>
 						</p:dataTable>
+					</h:form>
+				</p:tab>
 
-						<h:form>
-							<p:dialog widgetVar="dialogNuevaRepetida" modal="true"
-								resizable="false" draggable="false" closable="false">
-
-								<h:panelGrid id="gridNuevaRepetida" columns="2" cellpadding="5">
-
-									<h:outputLabel for="numberSheet" value="Numero de la ficha: *" />
-									<p:inputText id="numberSheet"
-										value="#{repeatedsheetBean.repeatedsheet.numberSheets}"
-										required="true">
-										<f:validateLength minimum="1" />
-										<f:validateDoubleRange minimum="1" maximum="670" />
-									</p:inputText>
-
-									<h:outputLabel for="countSheets" value="Cuantas Fichas: *" />
-									<p:inputText id="countSheets"
-										value="#{repeatedsheetBean.repeatedsheet.countSheets}"
-										required="true">
-										<f:validateLength minimum="1" />
-										<f:validateDoubleRange minimum="1" />
-									</p:inputText>
-								</h:panelGrid>
-
-								<h:panelGrid columns="2">
-									<p:commandButton
-										action="#{repeatedsheetBean.adicionarRepeatedsheet}"
-										value="Agregar" update="@([id$=NuevaRepetidaTabla])" />
-									<p:commandButton onclick="PF('dialogNuevaRepetida').hide()"
-										value="Cerrar" update="@([id$=gridNuevaRepetida])" />
-								</h:panelGrid>
-							</p:dialog>
-						</h:form>
-
-					</p:tab>
-
-					<p:tab title="Usuarios con mis laminas faltantes">
-						<h:form>
-							<p:dataTable var="user" value="#{missingsheetBean.usuarios}"
-								paginator="true" cellpadding="5" border="1" rows="6">
-
-								<p:column headerText="Usuario" sortBy="#{user.userName}">
-									<h:outputText value="#{user.userName}" />
-								</p:column>
-
-								<p:column headerText="Nombre completo">
-									<h:outputText value="#{user.fullName}" />
-								</p:column>
-
-								<p:column headerText="E-mail">
-									<h:outputText value="#{user.emailAddress}" />
-								</p:column>
-
-								<p:column headerText="Telefono">
-									<h:outputText value="#{user.phoneNumber}" />
-								</p:column>
-
-
-								<p:column headerText="Contactar Correo">
-
-									<p:commandButton value="Correo"
-										action="#{userBean.enviarCorreo}"></p:commandButton>
-
-								</p:column>
-								<p:column headerText="Contactar SMS">
-
-									<p:commandButton value="SMS" action="#{userBean.enviarSms}"></p:commandButton>
-
-								</p:column>
-
-
-							</p:dataTable>
-						</h:form>
-					</p:tab>
-
-					<p:tab title="Usuarios que les faltan mis laminas repetidas">
+				<p:tab title="Usuarios que les faltan mis laminas repetidas">
+					<h:form>
 						<p:dataTable var="laminasAVender"
 							value="#{missingsheetBean.laminasAVender}" paginator="true"
 							cellpadding="5" border="1" rows="6">
@@ -184,52 +179,54 @@
 							</p:column>
 
 							<p:column headerText="Contactar Correo">
-								<h:form>
-									<p:commandButton value="Correo"
-										action="#{userBean.enviarCorreo}"></p:commandButton>
-								</h:form>
+								<p:commandButton value="Correo"
+									action="#{userBean.enviarCorreo}">
+									<f:param name="userName" value="#{user.userName}" />
+								</p:commandButton>
 							</p:column>
+
 							<p:column headerText="Contactar SMS">
-								<h:form>
-									<p:commandButton value="SMS" action="#{userBean.enviarSms}"></p:commandButton>
-								</h:form>
+								<p:commandButton value="SMS" action="#{userBean.enviarSms}">
+									<f:param name="userName" value="#{user.userName}" />
+								</p:commandButton>
 							</p:column>
 
 						</p:dataTable>
-					</p:tab>
+					</h:form>
+				</p:tab>
 
-					<p:tab title="Usuarios que llenaron el álbum">
+				<p:tab title="Usuarios que llenaron el álbum">
 
-						<p:dataTable paginator="true" var="usuariosLlenos"
-							value="#{missingsheetBean.llenaron}">
+					<p:dataTable paginator="true" var="usuariosLlenos"
+						value="#{missingsheetBean.llenaron}">
 
-							<p:column headerText="Id">
-								<h:outputText value="#{usuariosLlenos.id}" />
-							</p:column>
+						<p:column headerText="Id">
+							<h:outputText value="#{usuariosLlenos.id}" />
+						</p:column>
 
-							<p:column headerText="Usuario">
-								<h:outputText value="#{usuariosLlenos.userName}" />
-							</p:column>
+						<p:column headerText="Usuario">
+							<h:outputText value="#{usuariosLlenos.userName}" />
+						</p:column>
 
-							<p:column headerText="Nombre completo">
-								<h:outputText value="#{usuariosLlenos.fullName}" />
-							</p:column>
+						<p:column headerText="Nombre completo">
+							<h:outputText value="#{usuariosLlenos.fullName}" />
+						</p:column>
 
-							<p:column headerText="E-mail">
-								<h:outputText value="#{usuariosLlenos.emailAddress}" />
-							</p:column>
+						<p:column headerText="E-mail">
+							<h:outputText value="#{usuariosLlenos.emailAddress}" />
+						</p:column>
 
-							<p:column headerText="Telefono">
-								<h:outputText value="#{usuariosLlenos.phoneNumber}" />
-							</p:column>
+						<p:column headerText="Telefono">
+							<h:outputText value="#{usuariosLlenos.phoneNumber}" />
+						</p:column>
 
-						</p:dataTable>
+					</p:dataTable>
 
-					</p:tab>
+				</p:tab>
 
-				</p:tabView>
-			</h:form>
+			</p:tabView>
 		</p:tab>
+
 
 		<p:tab title="Perfil">
 			<div class="ui-g-4">
