--- a/PRG2/WebContent/user/prime.xhtml
+++ b/PRG2/WebContent/user/prime.xhtml
@@ -49,9 +49,9 @@
 
 				</h:panelGrid>
 
-				<!-- <h:panelGrid columns="1" style="margin: 0 auto">
-					<p:captcha label="Captcha" required="true" language="es" />
-				</h:panelGrid> -->
+				<<h:panelGrid columns="1" style="margin: 0 auto">
+					<p:captcha label="Captcha" required="true" language="es" requiredMessage="El captcha es requerido"/>
+				</h:panelGrid>
 
 				<h:panelGrid columns="2" cellpadding="2" style="margin: 0 auto">
 					<p:commandButton value="Iniciar Sesión" id="btnForm"
